[tool.poetry]
name = "repl_python3_My-Summer-Game-bot"
version = "0.1.0"
description = ""
authors = ["Ryzen9-5950X-RT <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
db = "^0.1.1"
Flask = "^2.0.2"
discord-cli = "^1.0.0"
discord-config = "^0.0.2"
discord-lib = "^0.0.5"
discord-db = "^0.1.0"
Justify-discord = "^1.0"
discord-logging = "^1.0"
discord-webhook = "^0.17.0"
"discord.js" = "^1.0.7"
discord-rpc = "^3.5"
discord-handler = "^0.0.5"
discord-voice = "^0.0.0"
discord-lite = "^0.2"
discord-kartrider = "^1.0.6"
discord-interactive = "^4.0"
discord-android = "^1.1.0"
discord-musicbot = "^0.0.3-alpha.20170604"
notify-discord = "^0.1"
discord2 = "^2.0.1"
discord = "^2.0.0"
pycord = "^0.1.1"
pycord-components = "^1.0.2"
py-cord = "^2.1.3"
py-cord-components = "^2.2.3"
music-cord = "^2.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
